fixed z-index

--- a/src/components/Main/style.scss
+++ b/src/components/Main/style.scss
@@ -9,7 +9,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
     
     @include large {
       position: relative;
